--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles/style.css" rel="stylesheet">
+  <link href="styles/normalize.css" rel="stylesheet">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg">
+      <h1 class="title">Научиться учиться</h1>
+      <h2 class="subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="link">Узнать &rarr;</a> </h2>
+      <img class="main-illustration" src="./images/header-image.png" alt="изображение с мальчиком">
+      <div class="header__square-pic"></div>
 
     </header>
     <main class="content">
