--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo logo_place_header" src="./images/logo_place_header.svg">
+      <img alt="логотип" class="logo logo_place_header" src="./images/logo_place_header.svg">
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a class="header__link" href="index.html#description">Узнать &rarr;</a></h2>
       <img alt="изображение с мальчиком" class="header__main-illustration" src="./images/header-image.png">
       <div class="header__square-pic"></div>
@@ -21,22 +21,23 @@
     <main class="content">
       <section class="description" id="description">
         <div class="two-columns">
-          <h2 class="brief">Главные проблемы в обучении</h2>
-          <div class="main-text">
-            <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.Мы
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы
               готовимся к экзаменам и учим
               билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает
               нам реального знания.
               Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="paragraph"><span class="span-accent">Вывод:</span> учиться тоже надо уметь, но почему-то этому
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже надо
+              уметь, но почему-то этому
               мало где учат.
               Что с этим делать?</p>
-            <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+              сделать его
               эффективным
               и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-
-
         </div>
       </section>
 
@@ -96,16 +97,16 @@
           <li class="table__cell_theme_dark"><h3 class="table__heading">10</h3>
             <p class="table__text">Уделяйте внимание количеству и скорости.</p></li>
         </ul>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg">
+        <img alt="треугольник" class="kaufman__triangle" src="./images/kaufman-triangle.svg">
       </section>
     </main>
     <footer class="footer">
-      <div class="columns">
-        <div class="content_copyright">
-          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg">
-          <p class="author"> &copy;2021. Брель Мария.</p>
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img alt="логотип" class="logo logo_place_footer" src="./images/logo_place_footer.svg">
+          <p class="footer__author"> &copy;2021. Брель Мария.</p>
         </div>
-        <div class="content_info">
+        <div class="footer__columns_content_info">
           <h3 class="footer__column-heading">о Практикуме</h3>
           <ul class="footer__column-links" type="none">
             <li>
@@ -116,18 +117,19 @@
             <li><a class="footer__column-link" href="#">Наставники</a></li>
           </ul>
         </div>
-        <div class="content_social">
+        <div class="footer__columns_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links" type="none">
             <li>
               <a class="footer__column-link" href="#"><img class="footer__social-icon"
-                                                           src="./images/facebook_color_white.svg">Facebook</a>
+                                                           alt="Facebook" src="./images/facebook_color_white.svg">Facebook</a>
             </li>
             <li><a class="footer__column-link" href="#"><img class="footer__social-icon"
-                                                             src="./images/vk_color_white.svg">ВКонтакте</a>
+                                                             alt="Vk" src="./images/vk_color_white.svg">ВКонтакте</a>
             </li>
             <li><a class="footer__column-link" href="#"><img class="footer__social-icon"
-                                                             src="./images/instagram_color_white.svg">Instagram</a></li>
+                                                             alt="Instagram" src="./images/instagram_color_white.svg">Instagram</a>
+            </li>
           </ul>
 
         </div>
