--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
         <ul class="table">
-          <li class="table__сell"><h3 class="table__heading">86 миллиардов</h3>
+          <li class="table__cell"><h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p></li>
-          <li class="table__сell"><h3 class="table__heading">2,1 миллиард</h3>
+          <li class="table__cell"><h3 class="table__heading">2,1 миллиард</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный банк, 2017</p></li>
-          <li class="table__сell"><h3 class="table__heading">1000 терабайт</h3>
+          <li class="table__cell"><h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p></li>
-          <li class="table__сell"><h3 class="table__heading">500 триллионов</h3>
+          <li class="table__cell"><h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p></li>
-          <li class="table__сell"><h3 class="table__heading">420 миллионов</h3>
+          <li class="table__cell"><h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный банк, 2017</p></li>
-          <li class="table__сell"><h3 class="table__heading">17-20 лет</h3>
+          <li class="table__cell"><h3 class="table__heading">17-20 лет</h3>
             <p class="table__text">Пик обучаемости</p></li>
-          <li class="table__сell"><h3 class="table__heading">1885 год</h3>
+          <li class="table__cell"><h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p></li>
-          <li class="table__сell"><h3 class="table__heading">1889 год</h3>
+          <li class="table__cell"><h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p></li>
         </ul>
       </section>
@@ -76,25 +76,25 @@
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
-          <li class="table__сell table__cell_theme_dark"><h3 class="table__heading">1</h3>
+          <li class="table__cell table__cell_theme_dark"><h3 class="table__heading">1</h3>
             <p class="table__text">Выберите привлекательный проект.</p></li>
-          <li class="table__сell table__cell_theme_dark"><h3 class="table__heading">2</h3>
+          <li class="table__cell table__cell_theme_dark"><h3 class="table__heading">2</h3>
             <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p></li>
-          <li class="table__сell table__cell_theme_dark"><h3 class="table__heading">3</h3>
+          <li class="table__cell table__cell_theme_dark"><h3 class="table__heading">3</h3>
             <p class="table__text">Определите целевой уровень мастерства.</p></li>
-          <li class="table__сell table__cell_theme_dark"><h3 class="table__heading">4</h3>
+          <li class="table__cell table__cell_theme_dark"><h3 class="table__heading">4</h3>
             <p class="table__text">Разбейте навык на элементы.</p></li>
-          <li class="table__сell table__cell_theme_dark"><h3 class="table__heading">5</h3>
+          <li class="table__cell table__cell_theme_dark"><h3 class="table__heading">5</h3>
             <p class="table__text">Приготовьте все необходимое для занятий.</p></li>
-          <li class="table__сell table__cell_theme_dark"><h3 class="table__heading">6</h3>
+          <li class="table__cell table__cell_theme_dark"><h3 class="table__heading">6</h3>
             <p class="table__text">Устраните препятствия для занятий.</p></li>
-          <li class="table__сell table__cell_theme_dark"><h3 class="table__heading">7</h3>
+          <li class="table__cell table__cell_theme_dark"><h3 class="table__heading">7</h3>
             <p class="table__text">Выделите специальное время для занятий.</p></li>
-          <li class="table__сell table__cell_theme_dark"><h3 class="table__heading">8</h3>
+          <li class="table__cell table__cell_theme_dark"><h3 class="table__heading">8</h3>
             <p class="table__text">Создайте быстрые петли обратной связи.</p></li>
-          <li class="table__сell table__cell_theme_dark"><h3 class="table__heading">9</h3>
+          <li class="table__cell table__cell_theme_dark"><h3 class="table__heading">9</h3>
             <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p></li>
-          <li class="table__сell table__cell_theme_dark"><h3 class="table__heading">10</h3>
+          <li class="table__cell table__cell_theme_dark"><h3 class="table__heading">10</h3>
             <p class="table__text">Уделяйте внимание количеству и скорости.</p></li>
         </ul>
         <div class="kaufman__triangle"></div>
@@ -107,7 +107,7 @@
           <p class="footer__author"> &copy;2021. Брель Мария.</p>
         </div>
         <div class="footer__column footer__column_content_info">
-          <h3 class="footer__column-heading">о Практикуме</h3>
+          <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
             <li>
               <a class="footer__column-link" href="#">Главная</a>
