--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="styles/normalize.css" rel="stylesheet">
-  <link href="styles/style.css" rel="stylesheet">
+  <link href="pages/index.css" rel="stylesheet">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -106,7 +105,7 @@
           <img alt="логотип" class="logo logo_place_footer" src="./images/logo_place_footer.svg">
           <p class="footer__author"> &copy;2021. Брель Мария.</p>
         </div>
-        <div class="footer__column footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
             <li>
@@ -116,7 +115,7 @@
             </li>
             <li><a class="footer__column-link" href="#">Наставники</a></li>
           </ul>
-        </div>
+        </nav>
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
