--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         жизни? <a class="header__link" href="index.html#description">Узнать &rarr;</a></p>
       <img alt="изображение с мальчиком" class="header__main-illustration" src="./images/header-image.png">
       <div class="header__square-pic"></div>
-
     </header>
     <main class="content">
       <section class="description" id="description">
@@ -38,6 +37,39 @@
               и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+
+      <section class="techniques">
+
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=arj7oStGLkU"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=5MgBikgcWnY"></iframe>
+        </div>
+      </section>
+
+      <section class=" oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+              гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да
+              так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
+              тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a class="feynman__link" href="index.html#kaufman">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
@@ -65,10 +97,20 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="index.html#kaufman">Подробнее &rarr;</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги">
+            <a class="khan__book-link">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman" id="kaufman">
@@ -97,6 +139,17 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p></li>
         </ul>
         <div class="kaufman__triangle"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a><img class="resources__logo" src="./images/resources-arzamas.svg" alt="арзамас"></a>
+          <a><img class="resources__logo" src="./images/resources-n1.svg" alt="n+1"></a>
+          <a><img class="resources__logo" src="./images/resources-strelka.svg" alt="стрелка"></a>
+          <a><img class="resources__logo" src="./images/resources-polka.svg" alt="полка"></a>
+        </div>
       </section>
     </main>
     <footer class="footer">
