--- a/index.html
+++ b/index.html
@@ -40,15 +40,39 @@
       </section>
 
       <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="два вида внимания">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p></li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Recall">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="интерливинг">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p></li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="вопросы">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p></li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Иллюзия компетентности">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
 
+        </ul>
       </section>
 
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=arj7oStGLkU"></iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=5MgBikgcWnY"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -108,7 +132,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги">
-            <a class="khan__book-link">Купить книгу &rarr;</a>
+            <a href="#" class="khan__book-link">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -145,10 +169,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a><img class="resources__logo" src="./images/resources-arzamas.svg" alt="арзамас"></a>
-          <a><img class="resources__logo" src="./images/resources-n1.svg" alt="n+1"></a>
-          <a><img class="resources__logo" src="./images/resources-strelka.svg" alt="стрелка"></a>
-          <a><img class="resources__logo" src="./images/resources-polka.svg" alt="полка"></a>
+          <a href="https://arzamas.academy/" target="_blank"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="арзамас"></a>
+          <a href="https://nplus1.ru/" target="_blank"><img class="resources__logo" src="./images/resources-n1.svg" alt="n+1"></a>
+          <a href="https://strelkamag.com/" target="_blank"><img class="resources__logo" src="./images/resources-strelka.svg" alt="стрелка"></a>
+          <a href="https://polka.academy/" target="_blank"><img class="resources__logo" src="./images/resources-polka.svg" alt="полка"></a>
         </div>
       </section>
     </main>
