--- a/index.html
+++ b/index.html
@@ -76,12 +76,10 @@
       <div class="video__iframes">
         <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen class="video__iframe"
-                frameborder="0"
                 src="https://www.youtube.com/embed/arj7oStGLkU"
                 title="YouTube video player"></iframe>
         <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen class="video__iframe"
-                frameborder="0"
                 src="https://www.youtube.com/embed/5MgBikgcWnY"
                 title="YouTube video player"></iframe>
       </div>
@@ -143,7 +141,7 @@
         <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
         <div class="khan__book-container">
           <img alt="обложка книги" class="khan__book-pic" src="./images/khan-book.jpg">
-          <a class="khan__book-link" href="#">Купить книгу &rarr;</a>
+          <a class="khan__book-link" href="https://fb2lib.ru/obshchaya-pedagogika/ves-mir-7/" target="_blank">Купить книгу &rarr;</a>
         </div>
       </div>
     </section>
