--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <img alt="Иллюзия компетентности" class="cards__image" src="./images/cards-competence.png">
           <h3 class="cards__title">Иллюзия компетентности</h3>
           <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
-            владеете новой темой.</p>
+            владеете новой темой.</p></li>
 
       </ul>
     </section>
