--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li class="cards__item">
           <img alt="Recall" class="cards__image" src="./images/cards-recall.png">
           <h3 class="cards__title">Recall</h3>
-          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p></li>
         <li class="cards__item">
           <img alt="интерливинг" class="cards__image" src="./images/cards-interliving.png">
           <h3 class="cards__title">Интерливинг</h3>
